--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 style="background-image: url('./Images/sunny-day.png'); background-repeat: no-repeat; background-position: center; background-size: 20px;"></button>
             <button class="custom-button" onclick="customAction3()" fdprocessedid="Night"
                 style="background-image: url('./Images/night-mode.png'); background-repeat: no-repeat; background-position: center; background-size: 20px;"></button>
-            <button class="custom-button" onclick="customAction4()" fdprocessedid="Studio"
-                style="background-image: url('./Images/umbrella-stand.png'); background-repeat: no-repeat; background-position: center; background-size: 20px;"></button>
+            <!-- <button class="custom-button" onclick="customAction4()" fdprocessedid="Studio"
+                style="background-image: url('./Images/umbrella-stand.png'); background-repeat: no-repeat; background-position: center; background-size: 20px;"></button> -->
         </div>
         <div class="Car" style="display: none;">
             <img src="./Images/car-model.png" alt="Car Model" id="car-image" class="car-image" />
